WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149737
ASSERTION FAILED: param >= 0 in AnimationBase::updateStateMachine()
https://bugs.webkit.org/show_bug.cgi?id=149737
Summary
ASSERTION FAILED: param >= 0 in AnimationBase::updateStateMachine()
Simon Fraser (smfr)
Reported
2015-10-01 18:44:12 PDT
ASSERTION FAILED: param >= 0 in AnimationBase::updateStateMachine()
Attachments
Patch
(1.90 KB, patch)
2015-10-01 18:45 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-10-01 18:45:24 PDT
Created
attachment 262311
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-10-01 18:46:20 PDT
rdar://problem/19017465
WebKit Commit Bot
Comment 3
2015-10-02 12:36:59 PDT
Comment on
attachment 262311
[details]
Patch Clearing flags on attachment: 262311 Committed
r190514
: <
http://trac.webkit.org/changeset/190514
>
WebKit Commit Bot
Comment 4
2015-10-02 12:37:03 PDT
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 5
2015-10-02 12:46:57 PDT
We should remove the tests skipped by this issue. In particular, we should remove many tests from file LayoutTests/platform/ios-simulator/TestExpectations (search for the radar URL, "
rdar://problem/19017465
").
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug