ASSERTION FAILED: param >= 0 in AnimationBase::updateStateMachine() https://bugs.webkit.org/show_bug.cgi?id=149737 rdar://problem/19017465

Reviewed by Dean Jackson.

CoreAnimation can give us an animation beginTime that is slightly into the future,
which results in 'param' here being < 0, so relax the assertion slightly.

Fixes lots of assertions running iOS WK2 layout tests.

* page/animation/AnimationBase.cpp:
(WebCore::AnimationBase::updateStateMachine):


Canonical link: https://commits.webkit.org/167870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190514 268f45cc-cd09-0410-ab3c-d52691b4dbfc